Fix alignment of search fields boxes

--- a/src/styles/partials/_searchbar.scss
+++ b/src/styles/partials/_searchbar.scss
@@ -1,8 +1,16 @@
 .searchbar {
     margin-top: 2rem;
-    .field {
-        margin-right: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .search-fields {
+        display: flex;
+        flex-direction: column;
         text-align: right;
+        margin: auto;
+        width: max-content;
+    }
+    .field {
         margin-bottom: 1rem;
         .searchfield {
             width: 40rem;
@@ -21,6 +29,7 @@
         flex-direction: row;
         margin-top: 3rem;
         height: 2rem;
+        width: calc(100vw - 18rem);
         .sortBy {
             margin-left: auto;
             width: max-content;
